# quire

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.gitweb  README.md  SECURITY.md  build.rs  justfile
.cargo/: mutants.toml
.github/: dotslash-config.json
.github/workflows/: ci.yml  gitweb.yml  release.yml  udeps.yml
.quire/: Dockerfile  ci.fnl  config.fnl
.ramekin/: Dockerfile
conf/: gitweb.conf  lighttpd.conf
docs/: CI-FENNEL.md  CI-STATE.md  CI.md  PLAN.md  STYLE_GUIDE.md  config.md  fennel.md  quire-ci-deployment.md
docs/host/: README.md  quire-dispatch  sshd_config
docs/notes/: 2026-04-28-ci-registration.md
docs/plans/: 2026-04-28-mirror-push-event-socket.md  2026-04-29-ci-fnl-mirror-design.md  2026-05-01-ci-execution-architecture-design.md  2026-05-02-ci-loading-rename-design.md  2026-05-02-pipeline-image-declaration.md  2026-05-03-ci-mirror-helper-design.md  2026-05-04-per-run-container-lifecycle-design.md  2026-05-04-per-run-container-lifecycle.md  2026-05-06-ci-sqlite-migration-design.md  2026-05-07-ci-runtime-extraction.md  2026-05-07-secret-redaction.md  2026-05-08-workspace-split.md  2026-05-14-quire-ci-server-api-design.md  2026-05-23-quire-ci-events-endpoint.md  2026-05-23-quire-ci-split-design.md  2026-06-23-multi-target-mirror-design.md
docs/superpowers/plans/: 2026-05-06-ci-sqlite-migration.md
migrations/: 0002_sh_events.sql
quire-ci/: Cargo.toml  build.rs
quire-ci/migrations/: 0001_initial.sql
quire-ci/src/: db.rs  event.rs  main.rs  quire.rs  secret_source.rs  server.rs  sink.rs
quire-core/: Cargo.toml
quire-core/src/: api.rs  event.rs  fennel.rs  lib.rs  secret.rs  telemetry.rs
quire-core/src/ci/: bootstrap.rs  dispatch.rs  event.rs  logs.rs  macros.fnl  mirror.rs  mod.rs  pipeline.rs  registration.rs  repo_config.rs  run.rs  runtime.rs  session.rs  stdlib.fnl  transport.rs
quire-server/: Cargo.toml
quire-server/migrations/: 0001_initial.sql  0003_ci_api.sql  0004_bootstrap_api.sql  0004_bootstrap_fetched.sql  0005_rename_run_token.sql  0006_run_transitions.sql  0006_traceparent.sql  0007_events_json.sql  0007_schema_cleanup.sql  0008_rename_sh.sql  0009_rename_ci_vocab.sql  0010_outcome_schema.sql
quire-server/src/: db.rs  error.rs  event.rs  lib.rs  mirror.rs
quire-server/src/ci/: error.rs  mirror.rs  mod.rs  pipeline.rs  registration.rs  run.rs  runtime.rs
quire-server/src/db/: mod.rs  runs.rs
quire-server/src/quire/: mod.rs
quire-server/src/quire/web/: api.rs  auth.rs  db.rs  error.rs  format.rs  handlers.rs  mod.rs  templates.rs
quire-server/src/quire/web/handlers/: ci.rs  commit.rs  file.rs  git.rs  log_view.rs  mod.rs  refs.rs  repo.rs  repo_list.rs  tree.rs
quire-server/static/: quire-app.js  style.css
quire-server/templates/: _base.html  _footer.html  _nav.html  _repo_section_nav.html  bookmarks.html  commit.html  config.html  file.html  log.html  repo_home.html  repo_list.html  tags.html  tree.html
quire-server/templates/ci/: run_detail.html  run_list.html
quire-server/tests/: cli.rs  property.rs
quire-telemetry/: Cargo.toml
src/: ci.rs  config.rs  db.rs  error.rs  event.rs  fennel.rs  lib.rs  mirror.rs  quire.rs  repo.rs  run.rs  secret.rs  server.rs
src/ci/: docker.rs  error.rs  graph.rs  logs.rs  lua.rs  mirror.rs  mod.rs  pipeline.rs  redact.rs  registration.rs  run.rs  runtime.rs
src/quire/: mod.rs  web.rs
src/quire/web/: auth.rs  db.rs  format.rs  handlers.rs  mod.rs  templates.rs
static/: style.css
templates/: _base.html  _css.html  _footer.html  _nav.html  error.html
templates/ci/: run_detail.html  run_list.html
tests/: cli.rs  property.rs
