[workspace]
members = ["quire-ci", "quire-core", "quire-server"]
resolver = "3"

[workspace.dependencies]
clap = { version = "*", features = ["derive", "env"] }
facet = "*"
fs-err = "*"
jiff = { version = "*", features = ["serde"] }
miette = "*"
mlua = { version = "*", features = ["lua54", "serde", "vendored", "error-send"] }
petgraph = "*"
regex = "*"
sentry = { version = "*", features = ["backtrace", "contexts", "debug-images", "panic", "release-health", "reqwest", "rustls", "tokio"], default-features = false }
sentry-tracing = "*"
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
sentry-opentelemetry = "0.48.2"
tracing-opentelemetry = "0.30.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"
thiserror = "*"
tokio = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "json"] }
