[workspace]
members = ["quire-ci", "quire-core", "quire-server"]
resolver = "3"

[workspace.dependencies]
axum = "*"
clap = { version = "*", features = ["derive", "env"] }
facet = "*"
fs-err = "*"
jiff = { version = "*", features = ["serde"] }
miette = "*"
mlua = { version = "*", features = ["lua54", "serde", "vendored", "error-send"] }
petgraph = "*"
regex = "*"
sentry = { version = "*", features = ["backtrace", "contexts", "debug-images", "panic", "release-health", "reqwest", "rustls", "tokio"], default-features = false }
sentry-tracing = "*"
opentelemetry = "*"
opentelemetry_sdk = "*"
sentry-opentelemetry = "*"
tracing-opentelemetry = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"
thiserror = "*"
tokio = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "json"] }
