[package]
name = "quire-ci"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
fs-err = { workspace = true }
jiff = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
mlua = { workspace = true }
quire-core = { path = "../quire-core" }
quire-telemetry = { path = "../quire-telemetry" }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
