[package]
name = "quire-ci"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
facet = { workspace = true }
figue = "*"
fs-err = { workspace = true }
hmac = "*"
jiff = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
mlua = { workspace = true }
quire-core = { path = "../quire-core" }
reqwest = { version = "*", features = ["blocking", "json", "rustls"], default-features = false }
rusqlite = { version = "*", features = ["bundled"] }
rusqlite_migration = "*"
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "*"
subtle = "*"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "*", features = ["v7"] }
hex = "0.4.3"

[dev-dependencies]
http-body-util = "*"
tower = { version = "*", features = ["util"] }
