[package]
name = "quire-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fs-err = { workspace = true }
jiff = { workspace = true }
miette = { workspace = true }
mlua = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
