[package]
name = "quire-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fs-err = { workspace = true }
jiff = { workspace = true }
miette = { workspace = true }
mlua = { workspace = true }
petgraph = { workspace = true }
rand = "*"
regex = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
sentry = { workspace = true }
sentry-opentelemetry = { workspace = true }
sentry-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
serde = { workspace = true }
serde_ignored = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
