[package]
name = "quire-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = []

[lib]
name = "quire"
path = "src/lib.rs"

[[bin]]
name = "quire"
path = "src/bin/quire/main.rs"

[dependencies]
quire-core = { path = "../quire-core" }

fs-err = { workspace = true, features = ["tokio"] }
jiff = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
mlua = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

askama = "*"
axum = "*"
clap = { workspace = true }
clap_complete = "*"
rusqlite = { version = "*", features = ["bundled"] }
rusqlite_migration = "*"
sentry = { workspace = true }
sentry-tracing = { workspace = true }
serde_yaml_ng = "*"
shell-words = "*"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["json"] }
uuid = { version = "*", features = ["v7"] }
walkdir = "*"

[dev-dependencies]
assert_cmd = "*"
hegeltest = "*"
http-body-util = "*"
predicates = "*"
tower = { version = "*", features = ["util"] }
